feat: add all methods listAll and findbyId of services and controllers